--- a/Spring/docker-compose.yml
+++ b/Spring/docker-compose.yml
@@ -1,37 +1,21 @@
-version: "3.8"
-
+version: '2.12'
 services:
-  mysqldb:
+  database:
     image: mysql:5.7
-    restart: unless-stopped
-    env_file: ./.env
+    container_name: database
     environment:
-      - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
-      - MYSQL_DATABASE=$MYSQLDB_DATABASE
-    ports:
-      - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: tpachatproject
     volumes:
-      - db:/var/lib/mysql
-  app:
-    depends_on:
-      - mysqldb
-    build: ./spring-app
-    restart: on-failure
-    env_file: ./.env
+      - /home/mysql/data:/var/lib/mysql
     ports:
-      - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
-    environment:
-      SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
-        "spring.datasource.username" : "$MYSQLDB_USER",
-        "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
-        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
-        "spring.jpa.hibernate.ddl-auto" : "update"
-      }'
-    volumes:
-      - .m2:/root/.m2
-    stdin_open: true
-    tty: true
+      - 3306:3306
 
-volumes:
-  db:
+  spring-boot:
+    image: nidhal1996/ci-cd-project:90
+    container_name: spring
+    ports:
+      - 8089:8089
+    depends_on:
+      - database
+    restart: on-failure
